[MODINVOICE-615]. Add ability to cancel an invoice after changing fund distribution in POL